Throttle sending typing Fix chatlist ripple z-index

--- a/src/scss/partials/_chatlist.scss
+++ b/src/scss/partials/_chatlist.scss
@@ -292,6 +292,7 @@ ul.chatlist {
 
   .dialog-avatar, .user-caption {
     pointer-events: none;
+    position: relative; // for z-index
   }
 
   .user-title {
